--- a/06-blog/css/content.css
+++ b/06-blog/css/content.css
@@ -48,6 +48,10 @@ p{
     filter: blur(5px);
 }
 
+.img_article:hover{
+    filter: blur(0px);
+}
+
 @media screen and (min-width: 768px) {
     /* body{
         background-color: green;
