--- a/hue1/css/style.css
+++ b/hue1/css/style.css
@@ -49,12 +49,24 @@ header nav{
     padding: 40px 34px;
 }
 
-.main_img img{
-    width: 100%;
-    /* height: 90vh; */
-    object-fit: cover;
-    object-position: center;
+.main_img{
+    display: flex;
+    justify-content: right;
+  
     
+    object-fit: cover;
+    object-position: top;
+   
+}
+
+.main_img img{
+    
+    min-width: 120%;
+    
+    width: 100%;
+    max-height: 70vh;
+    object-fit: cover;
+    object-position: top ;
     
 }
 
@@ -75,6 +87,7 @@ h1{
     font-weight: bold;
     text-align: right;
     color: white;
+    margin: 15px 0px 0px;
     
 }
 
@@ -83,13 +96,15 @@ h1{
     font-size: 18px;
     text-align: right;
     color: var(--tuerkis);
+    margin: 5px 0px 15px;
 }
 
 .button{    
     color: white;
     background-color: var(--tuerkis);
     text-align: center;
-    padding: 13px 32px;
+    letter-spacing: 0px;
+    padding: 12px 32px;
     border-radius: 25px;
     border: 2px solid #66d2f9 ;
 
@@ -111,7 +126,8 @@ h2{
     font-size: 18px;
 }
 
-.section1, .section3 {
+.section1 {
+    
     margin: 15px 30px;
 }
 
@@ -140,6 +156,7 @@ h2{
 
 .section2 p{
     text-align: center;
+    color: var(--grau1);
 }
 
 #bild_kaempfer img{
@@ -174,10 +191,12 @@ h2{
     gap: 15px;
 }
 
-.kaempfer p{
-    color: var(--grau1);
+.section3 {
+    display: flex;
+    flex-flow: column;
+   box-sizing: content-box; 
+    
 }
-
 .section3 h2{
     text-align: center;
 }
@@ -185,25 +204,32 @@ h2{
 .section3 p{
     color: var(--grau2);
     text-align: center;
+    margin-left:  30px;
+    margin-right: 30px;
 }
 
-.button2{    
-    color: white;
+.button2{ 
+    max-width: 350px;
     background-color: var(--tuerkis);
     text-align: center;
     padding: 13px 32px;
     border-radius: 25px;
     border: 2px solid #66d2f9 ;
     margin: 45px;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 .button2 a{
+    
     font-family: montserat;
     font-size: 14px;
     font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
     color:white;
+    
 }
 
 footer{
