--- a/hue2/css/style.css
+++ b/hue2/css/style.css
@@ -9,6 +9,7 @@
     font-family: monti;
     src: url(../fonts/Montserrat-VariableFont_wght.ttf);
 }
+
 html *{
     box-sizing: border-box;
 }
@@ -19,6 +20,7 @@ html, body {
 }
 
 body{
+    /* background-color: bisque; */
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 14px;
     line-height: 22px;
@@ -60,6 +62,35 @@ header{
     margin: 30px;
 }
 
+#main_nav ul{
+    display: none;
+    position: absolute;
+    top: 89px;
+    left: 0px;
+    width: 100%;
+    height: 528px;
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 3em;
+    letter-spacing: 0.35em;
+    padding: 130px 0px;
+    text-shadow: 7px 10px#6abbd9;
+    
+    list-style-type: none;
+    text-decoration: none;
+    background-color: var(--türkis);
+    text-align: center;
+}
+#main_nav a{
+    text-decoration: none;
+    color: white;
+}
+
+#main_nav ul.sichtbar{
+    display: block;
+}
+
 #hero-img{
     background: url(../bilder/header-image.jpg) no-repeat center top / cover;
     text-align: right;
@@ -89,12 +120,16 @@ button {
     margin: 26px 30px 0px;
     
 }
-#section1 section{
-    margin: 0px 0px 50px;
+#section1 div section{
+    /* background-color: red; */
+
+    margin-bottom: 50px;
+    /* width: calc(100%); */
 }
-#section1 section img{
+#section1 div section img{
     display: flex;
-    width: calc(100% - 60px);
+    width: 100%;
+    
 }
 
 
@@ -113,21 +148,26 @@ button {
 
 #grid{
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto auto;
     grid-template-areas: 
         "bild1 bild1"
         "bild2 bild4"
         "bild3 bild4";
-        gap: 15px;
+        gap: 16px;
     margin: 0px 30px;
 }
 
 
+#grid img  {
+    width: 100%;
+    height: auto;
+}
+
 #bild1{
     display: flex;
     grid-area: bild1;
-    
+       
 }
 #bild2{
     
@@ -140,16 +180,10 @@ button {
 }
 #bild4{
     display: flex;
-    width: auto;
-    height: auto;
     grid-area: bild4;
 }
-#grid div img  {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    display: flex;  
-}
+
+
 
 .section3{
     margin: 60px 30px 0px;
