--- a/hue2/style768.css
+++ b/hue2/style768.css
@@ -1,25 +1,34 @@
 @media  screen and (min-width: 768px) {
-    #section1 div {
+    #section1 {
+        /* margin-left: 30px;
+        margin-right: 30px; */
+    }
+
+    #section1 > div {
         display: flex;
+
         justify-content: space-between;
-        gap: 15px;
-        margin: 26px auto 0px;
+        gap: 16px;
+        /* margin: 26px auto 0px; */
+
+
         
     }
 
-    #section1 div section{
+    #section1 section{
+        
         flex: 1;
         text-align: center;
     }
-    #section1 div section img{
+    #section1 img{
 
         width: 100%;
         height: auto;
     }
 
     #section2 h2{
-         margin: 0px auto;
-         margin-right: auto;
+         /* margin: 0px auto; */
+         /* margin-right: auto; */
          
     }
 
@@ -30,10 +39,12 @@
             "bild1 bild1 bild2 bild4"
             "bild1 bild1 bild3 bild4";
     }
-    .inner_wrapper{
-        max-width: 964px;
+     
+.inner_wrapper{
+        max-width: 900px;
         margin-left: auto;
         margin-right: auto;
-    }   
+    }
 }
 
+ 
