--- a/Projekt-Speisekarte/css/slider.css
+++ b/Projekt-Speisekarte/css/slider.css
@@ -4,6 +4,7 @@
     cursor: pointer;
     width: 40px;
     height: 20px;
+    margin-top: 4px;
     /* border-radius: 1em;
     background-color: var(--fisch);
     border: 2px solid black; */
@@ -48,7 +49,7 @@ input:checked + .slider:before {
     -webkit-transform: translateX(18px);
     -ms-transform: translateX(18px);
     transform: translateX(18px);
-    background-color: var(--gril);
+    background-color: var(--grill);
 }
 
 /* Beschriftung des Sliders vorne */
