--- a/Projekt-Speisekarte/css/slider.css
+++ b/Projekt-Speisekarte/css/slider.css
@@ -36,7 +36,7 @@
     width: 12px;
     left: 4px;
     bottom: 2.5px;
-    background-color: var(--mittag);
+    background-color: var(--schalterfarbe);
     -webkit-transition: .4s;
     transition: .4s;
 }
