--- a/Projekt-Speisekarte/css/style.css
+++ b/Projekt-Speisekarte/css/style.css
@@ -29,6 +29,18 @@ body{
     font-size: 14px;
 }
 
+#header_sprache{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#sprache a img{
+    width: 25px;
+    margin-top: 10px;
+    align-items: baseline;
+}
+
 .unsichtbar{
     display: none;
     display: inline;
@@ -190,8 +202,9 @@ button:hover{
     
 }
 
+/* gehört noch auf none gesetzt! */
 ul{
-    display: none;
+    display: none; 
     /* height: 0px; */
     transition: 4s;
     padding-left: 0px;
@@ -249,10 +262,11 @@ footer span:hover{
 
 #innerWrapper{
     /* Max width auf 1024 setzen und im Mediascreen für handy auf 250px setzen */
-    max-width: 250px;
+    max-width: 1250px;
     margin-left: auto;
     margin-right: auto;
 }
+
 
 @media screen {
     
