--- a/Projekt-Speisekarte/css/admin.css
+++ b/Projekt-Speisekarte/css/admin.css
@@ -1,4 +1,12 @@
 /* ab hier für den Login und speisenverwaltungsbereich */
+h2{
+    text-align: center;
+}
+
+.center{
+    text-align: center;
+}
+
 .login{
     text-align: center;
 }
@@ -27,37 +35,58 @@ input{
 
 }
 
-.verwaltung{
+.verwaltung {
     display: flex;
     justify-content: space-evenly;
+
 }
 
-nav {
+/* ul {
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    flex-flow: column;
+    flex-wrap: wrap;
+} */
+  .form-fields, .input-container{
+    display:flex;
+    flex-flow: column;
+}
+/* form .button{
     display: flex;
     justify-content: right;
     align-items: left;
     flex-flow: column;
     gap: 10px;
     margin-left: 10px;
-}
+} */
 
 ul{
-    /* display:none; */
-    /* position: relative; */
+    display:flex; 
+    flex-flow: column;
+    position: relative;
     text-align: right;
     align-items: right;
     max-width: 250px;
 }
 
 li{
+    display:flex; 
+    flex-flow: column;
     list-style-type: none;
     border-bottom: 0;
     margin-top: 3px;
     align-items: right;
 }
 
+form{
+    align-items: center;
+}
+label{
+    display: block;
+}
 .sub_buttons{
-    
+    margin: 5px;
     padding: 5px 0px;
     width: 180px;
     border-radius: 30px;
@@ -67,9 +96,46 @@ li{
     
 }
 
+.mini_buttons{
+    padding: 5px 0px;
+    width: 30px;
+    border-radius: 30px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 10px;
+    font-weight: bold; 
+}
+
 button {
     background-color: var(--nachtisch);
 }
+
+.form_beschriftung{
+    width: 80px
+}
+
+#tabelle{
+    display: flex;
+    flex-flow: column;
+    border: 1.5px solid black;
+}
+
+.reihe{
+    display: flex;
+    flex-flow: row;
+    /* border: 1.5px solid black; */
+}
+
+.spalte{
+    display: inline-block;
+    margin-left: 10px;
+    flex: 10%;
+    border: 1.5px solid black;
+
+    
+    
+}
+
+
 /* .sub_a{
     display: inline-block;
     color: black;
@@ -89,5 +155,3 @@ button {
         transform: scale(105%);
         box-shadow: 0px 0px 5px black;
 } */
-
-
