--- a/Projekt-Speisekarte/css/checkbox.css
+++ b/Projekt-Speisekarte/css/checkbox.css
@@ -3,7 +3,8 @@
     display: block;
     position: relative;
     cursor: pointer;
-    margin-top: 4px;
+    margin-top: 3px;
+    margin-bottom: 3px;
     padding-left: 22px;
     
 }
@@ -59,8 +60,36 @@
     transform: rotate(45deg);
 }
 
+/* @media screen and (min-width: 700px) {
+    .checkmark {
+        top: 0px;
+        left: 5px;
+        height: 16px;
+        width: 16px;
+        background-color: var(--fisch);
+    }
+    
+    .allergene .checkmark:after{
+        width: 5px;
+        height: 9px;
+    }
+} */
 
+/* @media screen and (min-width: 1000px) {
+    .checkmark {
+        top: 0px;
+        left: 5px;
+        height: 20px;
+        width: 20px;
+        background-color: var(--fisch);
+    }
 
+    .allergene .checkmark:after{
+        width: 7px;
+        height: 11px;
+    }
+    
+} */
 /* 
 <label class="container">Four
   <input type="checkbox">
