--- a/Projekt-Speisekarte/css/admin.css
+++ b/Projekt-Speisekarte/css/admin.css
@@ -1,11 +1,13 @@
 /* ab hier für den Login und speisenverwaltungsbereich */
 :root{
     --hauptfarbe: rgb(223,227,218);
+    --vorspeise: rgb(255,245,154);
+    --nachtisch: rgb(255,247,178);
 }
 
 body{
-    background: none;
-    color: black;
+    background-color: var(--hauptfarbe);
+    font-size: 14px;
     text-align: center;
 }
 
@@ -23,6 +25,7 @@ h2{
 .center{
     text-align: center;
 }
+
 
 .login{
     text-align: center;
@@ -52,53 +55,44 @@ input{
 
 }
 
-.verwaltung {
-    display: flex;
-    justify-content: space-evenly;
-
+#user{
+    text-align: right;
+    margin-right: 5vb;
+    
 }
 
-/* ul {
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    flex-flow: column;
-    flex-wrap: wrap;
-} */
-  .form-fields, .input-container{
+.form-fields, .input-container{
     display:flex;
     flex-flow: column;
 }
-/* form .button{
-    display: flex;
-    justify-content: right;
-    align-items: left;
-    flex-flow: column;
-    gap: 10px;
-    margin-left: 10px;
-} */
+
 
 ul{
     display:flex; 
-    flex-flow: column;
+    flex-flow:row;
     position: relative;
-    text-align: center;
+    /* text-align: center; */
     align-items: center;
-    max-width: 250px;
+    padding:0px;
 }
 
 li{
-    /* display:flex; 
-    flex-flow: column; */
     list-style-type: none;
     border-bottom: 0;
     margin-top: 3px;
+    text-align: center;
     align-items: right;
-    columns: 2;
+}
+
+#fehler{
+    display:block;
+    text-align: center;
+    color: brown;
+    font-weight: bold;
 }
 
 form{
-    display: block;
+    display: flex;
     flex-flow: column;
     align-items: center;
     text-align: center;
@@ -110,11 +104,15 @@ form div{
     margin: 10px;
 }
 
-label{
-    /* display: block;
-    text-align: center; */
-
+button{
+    padding: 10px 0px;
+    width: 150px;
+    border-radius: 30px;
+    background-color: var(--nachtisch);
+    font-size: 18px;
+    font-weight: bold;
 }
+
 .sub_buttons{
     margin: 5px;
     padding: 5px 0px;
@@ -123,7 +121,6 @@ label{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 10px;
     font-weight: bold;
-    
 }
 
 .mini_buttons{
@@ -133,10 +130,6 @@ label{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 10px;
     font-weight: bold; 
-}
-
-button {
-    background-color: var(--nachtisch);
 }
 
 .form_beschriftung{
@@ -166,30 +159,4 @@ select {
     margin-left: 10px;
     flex: 10%;
     border: 1.5px solid black;
-
-    
-    
 }
-#innerWrapper{
-    max-width: none;
-}
-
-/* .sub_a{
-    display: inline-block;
-    color: black;
-    border: 2px solid black;
-    border-radius: 15px;
-    padding: 5px 0px;
-    width: 180px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 10px;
-    font-weight: bold;
-    background-color: var(--suppe);
-    text-decoration: none;
-    text-align: center;
-}
-
-.sub_a:hover{
-        transform: scale(105%);
-        box-shadow: 0px 0px 5px black;
-} */
