--- a/Projekt-Speisekarte/css/style_monitor.css
+++ b/Projekt-Speisekarte/css/style_monitor.css
@@ -44,7 +44,7 @@ body{
     /* var(--hauptfarbe); */
     background: url(../img/IMG_20200727_141402nur_wasser.jpg) ;
     background-size: 1920px 1075px;
-    font-family:joe;
+    font-family: joe;
     font-size: 22px;
     letter-spacing: 3px;
     color:lightgoldenrodyellow;
@@ -59,8 +59,8 @@ main{
 h1{
     text-align: center;
     margin-bottom: 15px;
-    /* font-size: 40px; */
     font-weight: bold;
+    margin-top: 1.5em;
 }
 
 h3{
@@ -82,7 +82,6 @@ button{
     padding: 15px 0px;
     width: 520px;
     border-radius: 35px;
-    /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
     font-size: 28px;
     font-weight: bold;
     letter-spacing: 6px;
@@ -159,8 +158,11 @@ li::before{
 }
 
 footer{
+    display: block;
+    position: absolute;
+    bottom: 1em;
     text-align: center;
-    margin: 20px 0px;
+    width: 100%;
 }
 
 footer span:hover{
